--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profil perusahaan</title>
-
+    <title>profil-perusahaan</title>
+    <!-- fonts -->
     <script src="https://unpkg.com/feather-icons"></script>
 
-    <!-- my fonts -->
+    <!-- icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,27 +15,27 @@
       rel="stylesheet"
     />
 
-    <!-- my style -->
-    <link rel="stylesheet" href="style.css" />
+    <!-- style -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body id="body">
+  <body id="home">
     <nav class="navbar">
-      <h1>Konsul<span>disna</span>.</h1>
-      <ul>
-        <li><a href="#body">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#layanan">Layanan</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
+      <a href="#" class="navbar-logo">Konsul<span>disna</span></a>
 
-      <div class="navbar-menu">
+      <div class="navbar-nav">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#layanan">Layanan</a>
+        <a href="#contact">Contact</a>
+      </div>
+      <div class="navbar-extra">
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
     </nav>
 
     <div class="container">
       <div class="title">
-        <h2>Konusltan Pajak Isnaeni Purnamawati</h2>
+        <h2>Konsultan Pajak Isnaeni Purnamawati</h2>
         <p>mengatasi masalah</p>
         <p class="besar">PAJAK DAN KEUANGAN</p>
         <hr />
@@ -66,28 +66,28 @@
     <div class="headlayanan">
       <div class="layanan">
         <div class="cards">
+          <img src="img/hero-image.jpg" alt="" />
           <h3>Laporan SPT masa</h3>
-          <img src="img/hero-image.jpg" alt="" />
           <p>Perorangan atau Badan</p>
         </div>
         <div class="cards">
+          <img src="img/hero-image.jpg" alt="" />
           <h3>Laporan SPT Tahunan</h3>
-          <img src="img/hero-image.jpg" alt="" />
           <p>Perorangan atau Badan</p>
         </div>
         <div class="cards">
+          <img src="img/hero-image.jpg" alt="" />
           <h3>Laporan Keuangan</h3>
-          <img src="img/hero-image.jpg" alt="" />
           <p>Perorangan atau Badan</p>
         </div>
         <div class="cards">
-          <h3>Judul layanan</h3>
           <img src="img/hero-image.jpg" alt="" />
+          <h3>Judul layanan</h3>
           <p>paragraf</p>
         </div>
         <div class="cards">
-          <h3>Judul layanan</h3>
           <img src="img/hero-image.jpg" alt="" />
+          <h3>Judul layanan</h3>
           <p>paragraf</p>
         </div>
       </div>
@@ -137,9 +137,11 @@
         <a href="https://www.instagram.com/omanabdurahmann/">omanabdurahman</a>
       </p>
     </footer>
+
     <script>
       feather.replace();
     </script>
+
     <script src="js/script.js"></script>
   </body>
 </html>
